# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittelu.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
src/: game.py  game_loop.py  initialize_database.py  level.py  main.py  renderer.py  settings.py  sprites.py
src/data/: instructions.txt  level_data.yaml
src/level/: level.py  level_data.py
src/level_logic/: level_logic.py
src/repositories/: high_scores_repository.py  how_to_play_repository.py  level_repository.py
src/sprites/: box.py  laser.py  player.py  wall.py
src/tests/: how_to_play_repository_test.py  level_logic_test.py  level_repository_test.py  level_test.py  sprites_test.py
src/ui/: game.py  game_loop.py  renderer.py
src/ui/game/: game.py  game_loop.py  game_renderer.py
src/ui/menu/: game_cleared_menu.py  high_scores_menu.py  how_to_play_menu.py  main_menu.py  menu_base.py
